# francisconebrera.com

./: .gitignore  README.md  TODO.md  deployment.md  info-droplet-digitaocean.md  notas_rocket.md
entradas/_monadas/: apuntes_monadas.txt  entradaMonadaMaybe.html  monadaMaybeCompleta.hs  monadaState.hs  notasMonadaMaybe.txt
entradas/backtracking-1/: arboldados.dia  arbolsubconjuntos.dia  backtracking-1.html  entrada-wp.html
entradas/backtracking-1/code/: code_1.html  code_2.html  code_3.html  code_4.html
entradas/consejos-para-programadores/: consejos-para-programadores.html  fuente_fc.html
entradas/guia-ocean-hunter/: guia_mitologia_ocean_hunter.txt
entradas/guia-the-ocean-hunter/: guia-ocean-hunter.html
entradas/monadas/: entradaMonadaMaybe.html  state_monad_original.txt  wikibooksState.hs
entradas/resident-evil-1-5/: resident-evil-1-5.html
entradas/rust/: rust.html
web/: Cargo.toml  Cargo.toml.old  Rocket.toml  compilar.sh  poner_en_produccion.md  poner_en_produccion.sh
web/assets/css/: galeria.css  style.css
web/assets/js/: common.js  rainbow-custom.min.js
web/assets/templates/: 404.html  base.html.tera  macros.html
web/assets/templates/blog/: blog.html.tera  blog_base.html.tera  mostrar_entrada_blog.html.tera
web/assets/templates/index/: index.html.tera
web/assets/templates/portfolio/: portfolio.tera
web/src/: main.rs  tera_template_contexts.rs
web/src/routes/: blog.rs  common_utils.rs  file_ops.rs  mod.rs  secciones_simples.rs
web/src/security/: mod.rs  xss_prevention.rs
web/tests/: common-utils-tests.rs
(+1 files in other folders)
