[package]
name = "web"
version = "0.1.0"
authors = ["freinn <freinn@gmail.com>"]

[dependencies]
rocket = "0.2"
rocket_codegen = "0.2"
lazy_static = "*"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
chrono = { version = "0.3", features = ["serde"] }
itertools = "0.5.9"
regex = "0.2"
file = "*"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["tera_templates"]
