[package]
name = "web"
version = "0.1.1"
authors = ["freinn <freinn@gmail.com>"]

[dependencies]
rocket = "0.2.8"
rocket_codegen = "0.2.8"
lazy_static = "*"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
chrono = { version = "0.3", features = ["serde"] }
itertools = "0.5.9"
regex = "*"
file = "*"
htmlescape = "*"

[dependencies.rocket_contrib]
version = "0.2.5"
default-features = false
features = ["tera_templates"]
